# mysite

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  index.html
src/: lib.rs  main.rs  menu.rs  route.rs
src/comps/: blog.rs  compiler.rs  home.rs  mod.rs  updownbuttons.rs
