[package]
name = "mysite"
version = "0.1.0"
authors = ["Aron Hansen Berggren <aronber@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
yew = "0.18.0"
yew-router = "0.15.0"
cigrid = {git = "https://gitlab.com/arxra/my-cigrid-compiler.git", branch="main"}
env_logger = "0.9.0"
log = "0.4.14"
