[package]
name = "mysite"
version = "0.1.0"
authors = ["Aron Hansen Berggren <aronber@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.81"
yew = "0.20.0"
yew-router = "0.17.0"
cigrid = {git = "https://gitlab.com/arxra/my-cigrid-compiler.git", branch="main"}
env_logger = "0.10.0"
log = "0.4.17"
yew-hooks = "0.2.0"
anyhow = "1.0.68"
wee_alloc = "0.4.5"
web-sys = "0.3.60"
wasm-logger = "0.2.0"
